# rust-sourceannot

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
ci/: build-and-test.sh  check-msrv.sh  clippy.sh  extract-changelog.sh  get-release-version.sh  install-rust.sh  lint-aux.sh  package-crate.sh  publish-crate.sh  utils.sh
src/: annots.rs  lib.rs  range_set.rs
src/snippet/: build.rs  chars.rs  latin1.rs  mod.rs  utf16.rs  utf8.rs  utils.rs
tests/: render.rs
tests/snippet/: chars.rs  latin1.rs  main.rs  utf16_words.rs  utf8.rs  utf8_bytes.rs
