[package]
name = "sourceannot"
version = "0.0.0"
authors = ["Eduardo Sánchez Muñoz <eduardosm-dev@e64.io>"]
edition = "2021"
rust-version = "1.74"
description = "A library to render snippets of source code with annotations"
license = "MIT OR Apache-2.0"
keywords = ["annotation", "code", "error", "report"]
publish = false

[dependencies]
unicode-width = "0.1.11"

[dev-dependencies]
indoc = "2.0.5"
