[package]
name = "sourceannot"
version = "0.2.1"
authors = ["Eduardo Sánchez Muñoz <eduardosm-dev@e64.io>"]
edition = "2024"
rust-version = "1.85"
description = "A library to render snippets of source code with annotations"
repository = "https://github.com/eduardosm/rust-sourceannot"
license = "MIT OR Apache-2.0"
keywords = ["annotation", "code", "error", "report"]
exclude = ["/.github", ".gitignore", "/ci"]
publish = true

[dependencies]
unicode-width = "0.2.2"

[dev-dependencies]
indoc = "2.0.7"
